Make sure we have sufficent memory for the tests to run